Updates on Monday after the completion of the Carnival

--- a/06.bibs.md
+++ b/06.bibs.md
@@ -2,220 +2,220 @@
 
 Here is the list of all the assigned bib numbers, sorted by first name.
 
-| Name                   | Bib |
-| ---------------------- | --- |
-| Alan Davis             | 262 |
-| Alex Randall           | 261 |
-| Alison MacDonald       | 172 |
-| Alister Metherell      | 125 |
-| Alon Gudes             | 190 |
-| Alysha Mcnee           | 224 |
-| Amanda Mackie          | 136 |
-| Andrea Harris          | 225 |
-| Andrew Cheffers        | 111 |
-| Andrew Harmer          | 112 |
-| Andrew Hobson          | 294 |
-| Andrew McNeill         | 226 |
-| Andrew Power           | 156 |
-| Andrew Skelton         | 227 |
-| Andrew Slattery        | 295 |
-| Andy Findlay           | 147 |
-| Angus Shedden          | 296 |
-| Ann Ingwersen          | 155 |
-| Anne Mortimer          | 211 |
-| Anne Sanderson         | 228 |
-| Ant Nolan              | 199 |
-| Ari Piiroinen          | 229 |
-| Ariadna Iskhakova      | 101 |
-| Arlo Foxlee            | 157 |
-| Aya Rattray            | 254 |
-| Barry Huntington       | 106 |
-| Ben Coetzer            | 152 |
-| Ben Rattray            | 255 |
-| Bill Vandendool        | 116 |
-| Blake Gordon           | 215 |
-| Brad Saunders          | 279 |
-| Bruce Bowen            | 230 |
-| Bruce Paterson         | 162 |
-| Carolyn Cusworth       | 153 |
-| Carolyn Jackson        | 117 |
-| Carolyn Matthews       | 205 |
-| Cassandra Wyborn       | 219 |
-| Cathy Hogg             | 137 |
-| Chris Lucey            | 200 |
-| Christine Browne       | 231 |
-| Christopher Kent       | 216 |
-| Craig Steffens         | 113 |
-| Dale Ann Gordon        | 217 |
-| Dale Wallace           | 204 |
-| Darryl Smith           | 197 |
-| Dave Armstrong         | 138 |
-| David Firman           | 232 |
-| David King             | 233 |
-| David Poland           | 187 |
-| David Simpfendorfer    | 274 |
-| Deb Bain               | 120 |
-| Dennex Lui             | 280 |
-| Donelda Niles          | 256 |
-| Duncan Ledger          | 297 |
-| Duncan Sullivan        | 185 |
-| Edith Chow             | 234 |
-| Edward Linehan         | 277 |
-| Emily Stewart-Reed     | 126 |
-| Emily Walter           | 264 |
-| Emma Dodds             | 235 |
-| Eoin Rothery           | 236 |
-| Euan Shedden           | 298 |
-| Eva Kovacs             | 148 |
-| Finn Marsland          | 290 |
-| Gaby Withers           | 289 |
-| Garrick Larkin         | 299 |
-| Gavin Bennette         | 130 |
-| Geoff Todkill          | 209 |
-| Glen Warner            | 174 |
-| Gordon Bossley         | 237 |
-| Graeme Read            | 139 |
-| Graham Fowler          | 110 |
-| Grant MacDonald        | 173 |
-| Greg Barbour           | 184 |
-| Hamish Mackie          | 140 |
-| Heather Leslie         | 170 |
-| Inge Stokkel           | 272 |
-| Isaac Adams            | 114 |
-| Isobel Walter          | 265 |
-| Jacob Taylor           | 300 |
-| Jacquie Rand           | 269 |
-| James Lithgow          | 210 |
-| James Paton            | 238 |
-| James Robertson        | 281 |
-| Janelle Schafer        | 132 |
-| Jason Brown            | 141 |
-| Jason Rutkowski        | 252 |
-| Jay Moran              | 220 |
-| Jayne Sales            | 282 |
-| Jesse Piiroinen        | 239 |
-| Jessica Law            | 260 |
-| Jim Russell            | 189 |
-| Jo Hobson              | 301 |
-| Jo Wilson              | 149 |
-| Joe Sherriff           | 150 |
-| Joel Young             | 221 |
-| John Adams             | 115 |
-| John Gavens            | 171 |
-| John Robertson         | 178 |
-| John Skilton           | 163 |
-| Jonathan Hunter        | 291 |
-| Joseph Simpson         | 302 |
-| Joshua Dodds           | 240 |
-| Joshua Melsom          | 195 |
-| Justin Jarvis          | 303 |
-| Justine Hobson         | 304 |
-| Karena Hanley          | 191 |
-| Karyn Kerrison         | 151 |
-| Kate Gavens            | 182 |
-| Kath Copland           | 161 |
-| Kathy Liley            | 165 |
-| Keith Dawson           | 179 |
-| Keith Fifield          | 305 |
-| Ken McLean             | 257 |
-| Ken Young              | 273 |
-| Kris Kleeman           | 186 |
-| Leeanne Mason          | 201 |
-| Leigh Privett          | 167 |
-| Liam Drew              | 175 |
-| Lisa Dodds             | 241 |
-| Lisa Haycock           | 142 |
-| Liz Abbott             | 242 |
-| Lola Rattray           | 258 |
-| Lucas Kent             | 192 |
-| Lucy Mackie            | 306 |
-| Mace Neve              | 259 |
-| Malcolm Roberts        | 206 |
-| Mark Bourne            | 222 |
-| Mark Leis              | 253 |
-| Marquita Gelderman     | 118 |
-| Marta Linehan          | 275 |
-| Martin Peat            | 133 |
-| Mary Fien              | 243 |
-| Matt Roberts           | 307 |
-| Matt Ryan              | 208 |
-| Maya Bennette          | 131 |
-| Melanie Kent           | 214 |
-| Melissa Biviano        | 283 |
-| Mica Walter            | 266 |
-| Michael Halmy          | 128 |
-| Michael Reed           | 127 |
-| Michael Ridley-Smith   | 107 |
-| Michael Schafer        | 134 |
-| Michael Wood           | 176 |
-| Michelle Hammond       | 292 |
-| Mike Howe              | 308 |
-| Monica Lindemann       | 271 |
-| Monika Lee             | 244 |
-| Monique Jeacocke       | 245 |
-| Murray Withers         | 285 |
-| Naomi Penton           | 309 |
-| Naomi Scouller         | 286 |
-| Narasimha Rao Bandi    | 284 |
-| Natalie Schmitzer      | 181 |
-| Nicholas Hall          | 158 |
-| Nick Collins           | 203 |
-| Nick Vaughan           | 246 |
-| Nick Wilkinson         | 278 |
-| Nicola Mitchell        | 180 |
-| Niki Hale              | 310 |
-| Norah Skilton          | 164 |
-| Ori Gudes              | 193 |
-| Owen Means             | 121 |
-| Pat Bodger             | 129 |
-| Pat Khamphengphet      | 287 |
-| Peter Cusworth         | 154 |
-| Peter Dodds            | 247 |
-| Peter Feltham          | 103 |
-| Peter Mitchell         | 194 |
-| Peter Swanson          | 122 |
-| Peter Young            | 248 |
-| Phil White             | 212 |
-| Presley Scouller-Evans | 288 |
-| Rachel Penton          | 311 |
-| Ralph Koch             | 160 |
-| Raynie McNee           | 249 |
-| Rebekah Sunley         | 166 |
-| Reid Moran             | 263 |
-| Richard Robinson       | 104 |
-| Ricky Thackray         | 108 |
-| Rob Garden             | 119 |
-| Robert Prentice        | 123 |
-| Rohan Hyslop           | 143 |
-| Rory Shedden           | 312 |
-| Sally Dickson          | 124 |
-| Samuel Wilson          | 250 |
-| Sanda Halpin           | 196 |
-| Seb Dunne              | 109 |
-| Shane Hunter           | 207 |
-| Solomon Uturgaury      | 313 |
-| Stephanie Farrant      | 198 |
-| Steve Pyatt            | 144 |
-| Steve Truscott         | 251 |
-| Steven Law             | 218 |
-| Stuart Lynch           | 159 |
-| Sue Duckett            | 314 |
-| Tamsin Barnes          | 105 |
-| Tane Cambridge         | 202 |
-| Tash Thackray          | 135 |
-| Thomas Carroll         | 267 |
-| Timothy Farrant        | 177 |
-| Tom Lothian            | 183 |
-| Tom Reynolds           | 145 |
-| Tom Schults            | 270 |
-| Tom Walter             | 268 |
-| Tomas Krajca           | 276 |
-| Toni Brown             | 188 |
-| Tony Howes             | 223 |
-| Trevor Jacobs          | 293 |
-| Trudy Ringrose         | 168 |
-| Tui Hambrook           | 169 |
-| Veronika Iskhakova     | 102 |
-| Vivienne Prince        | 146 |
-| Warren Hofland         | 315 |
-| Will Whittington       | 213 |
+| # | Name                   | Bib |
+| -: | ---------------------- | --- |
+| 1 | Alan Davis             | 262 |
+| 2 | Alex Randall           | 261 |
+| 3 | Alison MacDonald       | 172 |
+| 4 | Alister Metherell      | 125 |
+| 5 | Alon Gudes             | 190 |
+| 6 | Alysha Mcnee           | 224 |
+| 7 | Amanda Mackie          | 136 |
+| 8 | Andrea Harris          | 225 |
+| 9 | Andrew Cheffers        | 111 |
+| 10 | Andrew Harmer          | 112 |
+| 11 | Andrew Hobson          | 294 |
+| 12 | Andrew McNeill         | 226 |
+| 13 | Andrew Power           | 156 |
+| 14 | Andrew Skelton         | 227 |
+| 15 | Andrew Slattery        | 295 |
+| 16 | Andy Findlay           | 147 |
+| 17 | Angus Shedden          | 296 |
+| 18 | Ann Ingwersen          | 155 |
+| 19 | Anne Mortimer          | 211 |
+| 20 | Anne Sanderson         | 228 |
+| 21 | Ant Nolan              | 199 |
+| 22 | Ari Piiroinen          | 229 |
+| 23 | Ariadna Iskhakova      | 101 |
+| 24 | Arlo Foxlee            | 157 |
+| 25 | Aya Rattray            | 254 |
+| 26 | Barry Huntington       | 106 |
+| 27 | Ben Coetzer            | 152 |
+| 28 | Ben Rattray            | 255 |
+| 29 | Bill Vandendool        | 116 |
+| 30 | Blake Gordon           | 215 |
+| 31 | Brad Saunders          | 279 |
+| 32 | Bruce Bowen            | 230 |
+| 33 | Bruce Paterson         | 162 |
+| 34 | Carolyn Cusworth       | 153 |
+| 35 | Carolyn Jackson        | 117 |
+| 36 | Carolyn Matthews       | 205 |
+| 37 | Cassandra Wyborn       | 219 |
+| 38 | Cathy Hogg             | 137 |
+| 39 | Chris Lucey            | 200 |
+| 40 | Christine Browne       | 231 |
+| 41 | Christopher Kent       | 216 |
+| 42 | Craig Steffens         | 113 |
+| 43 | Dale Ann Gordon        | 217 |
+| 44 | Dale Wallace           | 204 |
+| 45 | Darryl Smith           | 197 |
+| 46 | Dave Armstrong         | 138 |
+| 47 | David Firman           | 232 |
+| 48 | David King             | 233 |
+| 49 | David Poland           | 187 |
+| 50 | David Simpfendorfer    | 274 |
+| 51 | Deb Bain               | 120 |
+| 52 | Dennex Lui             | 280 |
+| 53 | Donelda Niles          | 256 |
+| 54 | Duncan Ledger          | 297 |
+| 55 | Duncan Sullivan        | 185 |
+| 56 | Edith Chow             | 234 |
+| 57 | Edward Linehan         | 277 |
+| 58 | Emily Stewart-Reed     | 126 |
+| 59 | Emily Walter           | 264 |
+| 60 | Emma Dodds             | 235 |
+| 61 | Eoin Rothery           | 236 |
+| 62 | Euan Shedden           | 298 |
+| 63 | Eva Kovacs             | 148 |
+| 64 | Finn Marsland          | 290 |
+| 65 | Gaby Withers           | 289 |
+| 66 | Garrick Larkin         | 299 |
+| 67 | Gavin Bennette         | 130 |
+| 68 | Geoff Todkill          | 209 |
+| 69 | Glen Warner            | 174 |
+| 70 | Gordon Bossley         | 237 |
+| 71 | Graeme Read            | 139 |
+| 72 | Graham Fowler          | 110 |
+| 73 | Grant MacDonald        | 173 |
+| 74 | Greg Barbour           | 184 |
+| 75 | Hamish Mackie          | 140 |
+| 76 | Heather Leslie         | 170 |
+| 77 | Inge Stokkel           | 272 |
+| 78 | Isaac Adams            | 114 |
+| 79 | Isobel Walter          | 265 |
+| 80 | Jacob Taylor           | 300 |
+| 81 | Jacquie Rand           | 269 |
+| 82 | James Lithgow          | 210 |
+| 83 | James Paton            | 238 |
+| 84 | James Robertson        | 281 |
+| 85 | Janelle Schafer        | 132 |
+| 86 | Jason Brown            | 141 |
+| 87 | Jason Rutkowski        | 252 |
+| 88 | Jay Moran              | 220 |
+| 89 | Jayne Sales            | 282 |
+| 90 | Jesse Piiroinen        | 239 |
+| 91 | Jessica Law            | 260 |
+| 92 | Jim Russell            | 189 |
+| 93 | Jo Hobson              | 301 |
+| 94 | Jo Wilson              | 149 |
+| 95 | Joe Sherriff           | 150 |
+| 96 | Joel Young             | 221 |
+| 97 | John Adams             | 115 |
+| 98 | John Gavens            | 171 |
+| 99 | John Robertson         | 178 |
+| 100 | John Skilton           | 163 |
+| 101 | Jonathan Hunter        | 291 |
+| 102 | Joseph Simpson         | 302 |
+| 103 | Joshua Dodds           | 240 |
+| 104 | Joshua Melsom          | 195 |
+| 105 | Justin Jarvis          | 303 |
+| 106 | Justine Hobson         | 304 |
+| 107 | Karena Hanley          | 191 |
+| 108 | Karyn Kerrison         | 151 |
+| 109 | Kate Gavens            | 182 |
+| 110 | Kath Copland           | 161 |
+| 111 | Kathy Liley            | 165 |
+| 112 | Keith Dawson           | 179 |
+| 113 | Keith Fifield          | 305 |
+| 114 | Ken McLean             | 257 |
+| 115 | Ken Young              | 273 |
+| 116 | Kris Kleeman           | 186 |
+| 117 | Leeanne Mason          | 201 |
+| 118 | Leigh Privett          | 167 |
+| 119 | Liam Drew              | 175 |
+| 120 | Lisa Dodds             | 241 |
+| 121 | Lisa Haycock           | 142 |
+| 122 | Liz Abbott             | 242 |
+| 123 | Lola Rattray           | 258 |
+| 124 | Lucas Kent             | 192 |
+| 125 | Lucy Mackie            | 306 |
+| 126 | Mace Neve              | 259 |
+| 127 | Malcolm Roberts        | 206 |
+| 128 | Mark Bourne            | 222 |
+| 129 | Mark Leis              | 253 |
+| 130 | Marquita Gelderman     | 118 |
+| 131 | Marta Linehan          | 275 |
+| 132 | Martin Peat            | 133 |
+| 133 | Mary Fien              | 243 |
+| 134 | Matt Roberts           | 307 |
+| 135 | Matt Ryan              | 208 |
+| 136 | Maya Bennette          | 131 |
+| 137 | Melanie Kent           | 214 |
+| 138 | Melissa Biviano        | 283 |
+| 139 | Mica Walter            | 266 |
+| 140 | Michael Halmy          | 128 |
+| 141 | Michael Reed           | 127 |
+| 142 | Michael Ridley-Smith   | 107 |
+| 143 | Michael Schafer        | 134 |
+| 144 | Michael Wood           | 176 |
+| 145 | Michelle Hammond       | 292 |
+| 146 | Mike Howe              | 308 |
+| 147 | Monica Lindemann       | 271 |
+| 148 | Monika Lee             | 244 |
+| 149 | Monique Jeacocke       | 245 |
+| 150 | Murray Withers         | 285 |
+| 151 | Naomi Penton           | 309 |
+| 152 | Naomi Scouller         | 286 |
+| 153 | Narasimha Rao Bandi    | 284 |
+| 154 | Natalie Schmitzer      | 181 |
+| 155 | Nicholas Hall          | 158 |
+| 156 | Nick Collins           | 203 |
+| 157 | Nick Vaughan           | 246 |
+| 158 | Nick Wilkinson         | 278 |
+| 159 | Nicola Mitchell        | 180 |
+| 160 | Niki Hale              | 310 |
+| 161 | Norah Skilton          | 164 |
+| 162 | Ori Gudes              | 193 |
+| 163 | Owen Means             | 121 |
+| 164 | Pat Bodger             | 129 |
+| 165 | Pat Khamphengphet      | 287 |
+| 166 | Peter Cusworth         | 154 |
+| 167 | Peter Dodds            | 247 |
+| 168 | Peter Feltham          | 103 |
+| 169 | Peter Mitchell         | 194 |
+| 170 | Peter Swanson          | 122 |
+| 171 | Peter Young            | 248 |
+| 172 | Phil White             | 212 |
+| 173 | Presley Scouller-Evans | 288 |
+| 174 | Rachel Penton          | 311 |
+| 175 | Ralph Koch             | 160 |
+| 176 | Raynie McNee           | 249 |
+| 177 | Rebekah Sunley         | 166 |
+| 178 | Reid Moran             | 263 |
+| 179 | Richard Robinson       | 104 |
+| 180 | Ricky Thackray         | 108 |
+| 181 | Rob Garden             | 119 |
+| 182 | Robert Prentice        | 123 |
+| 183 | Rohan Hyslop           | 143 |
+| 184 | Rory Shedden           | 312 |
+| 185 | Sally Dickson          | 124 |
+| 186 | Samuel Wilson          | 250 |
+| 187 | Sanda Halpin           | 196 |
+| 188 | Seb Dunne              | 109 |
+| 189 | Shane Hunter           | 207 |
+| 190 | Solomon Uturgaury      | 313 |
+| 191 | Stephanie Farrant      | 198 |
+| 192 | Steve Pyatt            | 144 |
+| 193 | Steve Truscott         | 251 |
+| 194 | Steven Law             | 218 |
+| 195 | Stuart Lynch           | 159 |
+| 196 | Sue Duckett            | 314 |
+| 197 | Tamsin Barnes          | 105 |
+| 198 | Tane Cambridge         | 202 |
+| 199 | Tash Thackray          | 135 |
+| 200 | Thomas Carroll         | 267 |
+| 201 | Timothy Farrant        | 177 |
+| 202 | Tom Lothian            | 183 |
+| 203 | Tom Reynolds           | 145 |
+| 204 | Tom Schults            | 270 |
+| 205 | Tom Walter             | 268 |
+| 206 | Tomas Krajca           | 276 |
+| 207 | Toni Brown             | 188 |
+| 208 | Tony Howes             | 223 |
+| 209 | Trevor Jacobs          | 293 |
+| 210 | Trudy Ringrose         | 168 |
+| 211 | Tui Hambrook           | 169 |
+| 212 | Veronika Iskhakova     | 102 |
+| 213 | Vivienne Prince        | 146 |
+| 214 | Warren Hofland         | 315 |
+| 215 | Will Whittington       | 213 |
