Results and media

--- a/01.schedule.md
+++ b/01.schedule.md
@@ -213,11 +213,11 @@ at **Harmonie German Club**
 |--|--|--|
 | Oct 21 | Return equipment to OACT shed and office | Marina + Fedor, Sergei |
 | | Return borrowed SI units to their owners | Fedor |
-| | Return 35 borrowed SIAC to Ryan Welsh, CORC | Fedor |
 | | Thank you messages 💌 to all sponsors and partners | Marina |
 | | Thank you messages 💌 to all participants | Marina |
 | | Thank you email 💌 to the organizing team | Marina |
 | | Articles, Photos, Interviews, Results <br/> to OA, OACT, ONSW, Pedal Power, Aus Orienteer, OA news | Marina |
 | | Financial report 🧾 to OACT | Marina |
+| | Print Course 5 MASS map for Bill Vandendool | Fedor |
 
 
