Update to Done page

--- a/00.aftermath.md
+++ b/00.aftermath.md
@@ -1,5 +1,8 @@
-(aftermath)=
 # 🥹 Done
+
+The 2024 MTBO Championships and Carnival were a great success.
+Over 200 competitors from all over Australia and New Zealand, and from as far as Great Britain, came to Canberra to compete in five events.
+Here are the results, maps, and photos.
 
 ## Results, Splits and LiveLox
 
