Little adjustment in Done page

--- a/00.aftermath.md
+++ b/00.aftermath.md
@@ -72,44 +72,44 @@ At `26:19` from the start of `19:00` **ABC News ACT** on `Sunday 20 October 2024
 :gutter: 1
 
 :::{grid-item-card}
-![alt text](_static/photo/7.jpeg)
+<a href="_static/photo/7.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/7.jpeg"></a>
 :::
 :::{grid-item-card}
-![alt text](_static/photo/2.jpeg)
-:::
-::::
-::::{grid}
-:gutter: 1
-
-:::{grid-item-card}
-![alt text](_static/photo/3.jpeg)
-:::
-:::{grid-item-card}
-![alt text](_static/photo/5.jpeg)
+<a href="_static/photo/2.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/2.jpeg"></a>
 :::
 ::::
 ::::{grid}
 :gutter: 1
 
 :::{grid-item-card}
-![alt text](_static/photo/9.jpeg)
+<a href="_static/photo/3.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/3.jpeg"></a>
+:::
+:::{grid-item-card}
+<a href="_static/photo/5.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/5.jpeg"></a>
 :::
 ::::
 ::::{grid}
 :gutter: 1
 
 :::{grid-item-card}
-![alt text](_static/photo/8.jpeg)
+<a href="_static/photo/9.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/9.jpeg"></a>
 :::
 ::::
 ::::{grid}
 :gutter: 1
 
 :::{grid-item-card}
-![alt text](_static/photo/4.jpeg)
+<a href="_static/photo/8.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/8.jpeg"></a>
+:::
+::::
+::::{grid}
+:gutter: 1
+
+:::{grid-item-card}
+<a href="_static/photo/4.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/4.jpeg"></a>
 :::
 :::{grid-item-card}
-![alt text](_static/photo/6.jpeg)
+<a href="_static/photo/6.jpeg" style="text-decoration: none; color: inherit;"><img src="_static/photo/6.jpeg"></a>
 :::
 ::::
 
