Update of the iView link

--- a/00.aftermath.md
+++ b/00.aftermath.md
@@ -32,9 +32,9 @@ Here are the results, maps, and photos.
 :gutter: 3
 
 :::{grid-item-card} ABC News ACT
-<a href="https://iview.abc.net.au/video/NU2404C294S00" target=_blank><img src="_static/media/abc_news.png"></a>
+<a href="https://www.dailymotion.com/video/x97qcj8" target=_blank><img src="_static/media/abc_news.png"></a>
 
-At `26:19` from the start of `19:00` **ABC News ACT** on `Sunday 20 October 2024`
+Aired in the **19:00 ABC News** on `Sunday 20 October 2024` in ACT and Queesland
 :::
 :::{grid-item-card} ABC article
 <a href="https://www.abc.net.au/news/2024-10-21/sport-mountain-bike-orienteering/104497898" target=_blank><img src="_static/media/abc_article.png"></a>
